# can-viewer

./: .gitignore  Cargo.toml  LICENSE.txt  index.html  readme.md
.github/workflows/: deploy.yml
frontend/: Cargo.toml  index.html
frontend/src/: app.rs  dbc.rs  lib.rs  messages.rs  plots.rs  side_panel.rs
src/: app.rs  dbc.rs  lib.rs  main.rs  messages.rs  plots.rs  side_panel.rs  widgets.rs
websocket/: Cargo.toml  playback_log.sh
websocket/src/: main.rs
