[package]
name = "can_plotter"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.33.0"
eframe = { version = "0.33.0", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
] }
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.70"
egui_plot = "0.34.0"
can-dbc = "6.0.0"
rfd = "0.15.4"
chrono = { version = "0.4.42", features = ["serde"] }
regex = "1.12.2"
regex-macro = "0.3.0"
bincode = { version = "2.0.1", features = ["serde"] }
base64 = "0.22.1"
hex = "0.4.3"
gloo-net = "0.6.0"
futures = "0.3.31"
num-format = "0.4.4"

[profile.release]
opt-level = 3
lto = "thin"

[profile.dev.package."*"]
opt-level = 2
